--- a/destinazioni/london.html
+++ b/destinazioni/london.html
@@ -15,9 +15,9 @@
     <nav class="navbar">
         <div class="nav-logo">🇬🇧 London Trip</div>
         <ul class="nav-links">
-            <li><a href="home.html">Home</a></li>
-            <li><a href="destinazioni.html">Destinazioni</a></li>
-            <li><a href="mappa.html">Mappa</a></li>
+            <li><a href="../home.html">Home</a></li>
+            <li><a href="../destinazioni.html">Destinazioni</a></li>
+            <li><a href="../mappa.html">Mappa</a></li>
         </ul>
     </nav>
 
