--- a/destinazioni/london.html
+++ b/destinazioni/london.html
@@ -13,7 +13,7 @@
 
     <!-- NAVBAR -->
     <nav class="navbar">
-        <div class="nav-logo">🇬🇧 London Trip</div>
+        <div class="nav-logo">London Trip</div>
         <ul class="nav-links">
             <li><a href="../home.html">Home</a></li>
             <li><a href="../destinazioni.html">Destinazioni</a></li>
@@ -338,11 +338,17 @@
         </div>
 
     </section>
-
-    <!-- FOOTER -->
-    <footer class="london-footer">
-        Designed with ❤️ in London Style
-    </footer>
+    <a href="#" class="back-to-top">⬆️</a>
+    <script>
+        document.addEventListener("scroll", () => {
+        const btn = document.querySelector(".back-to-top");
+        if (window.scrollY > 300) {
+            btn.classList.remove("hidden");
+        } else {
+            btn.classList.add("hidden");
+        }
+});
+</script>
 
 </body>
 </html>
