--- a/destinazioni/london.html
+++ b/destinazioni/london.html
@@ -10,7 +10,11 @@
 </head>
 
 <body class="londra-body">
-
+    <script>
+    if (localStorage.getItem("auth") !== "true") {
+        window.location.href = "index.html"; // o login.html, come preferisci
+    }
+    </script>
     <!-- NAVBAR -->
     <nav class="navbar">
         <div class="nav-logo">London Trip</div>
