--- a/mappa.html
+++ b/mappa.html
@@ -14,7 +14,7 @@
 <body class="map-body">
     <script>
     if (localStorage.getItem("auth") !== "true") {
-        window.location.href = "index.html"; // o login.html, come preferisci
+        window.location.href = "index.html"; 
     }
     </script>
 
