--- a/destinazioni/london.html
+++ b/destinazioni/london.html
@@ -12,7 +12,7 @@
 <body class="londra-body">
     <script>
     if (localStorage.getItem("auth") !== "true") {
-        window.location.href = "index.html"; // o login.html, come preferisci
+        window.location.href = "../index.html"; 
     }
     </script>
     <!-- NAVBAR -->
