--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 <body class="home-body">
     <script>
     if (localStorage.getItem("auth") !== "true") {
-        window.location.href = "index.html"; // o login.html, come preferisci
+        window.location.href = "index.html"; 
     }
     </script>
 
