--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
         <ul class="nav-links">
             <li><a href="home.html" class="active">Home</a></li>
             <li><a href="destinazioni.html">Destinazioni</a></li>
-            <li><a href="mappa.html">Mappa</a></li>
+            <!--<li><a href="mappa.html">Mappa</a></li>-->
         </ul>
     </nav>
 
