--- a/destinazioni/london.html
+++ b/destinazioni/london.html
@@ -54,18 +54,49 @@
                     <div class="timeline-time">13:30</div>
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
-                        <h3>Arrivo a Gatwick North</h3>
-                        <p>Uscita dall’aeroporto: 14:15–14:30</p>
+                        <h3>Arrivo a Gatwick North + Trasferimento</h3>
+                        <p>Dopo i controlli di sicurezza, effettua il trasferimento verso la stazione dei treni (South Terminal)<br>
+                        Segui i cartelli Shuttle to South Terminal / Trains<br>
+                        Navetta gratuita tra North e South Terminal<br>
+                        Durata: circa 2–3 minuti di navetta + 5 minuti a piedi con i tapis roulant.<span class="free">Gratis</span><br>
+                        </p>
                     </div>
                 </div>
 
                 <div class="timeline-item">
-                    <div class="timeline-time">14:30</div>
+                    <div class="timeline-time">15:10</div>
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
                         <h3>Trasferimento verso Londra</h3>
-                        <p>Gatwick Express → Victoria (30 min) – <span class="price">£20–25</span><br>
-                        Thameslink → London Bridge/Blackfriars (35–40 min) – <span class="price">£10–13</span></p>
+                        <p>Opzione A: Southern 
+                            Durata: circa 30–35 minuti<br>
+                            Frequenza: ogni 15 minuti circa.<br>
+                            Se compri in anticipo / off-peak<span class="price"> £12–£16 </span><br>
+                            Gatwick Express → Victoria (30 min) – <span class="price">£20–25</span><br>
+                            Thameslink → London Bridge/Blackfriars (35–40 min) – <span class="price">£10–13</span></p>
+                    </div>
+                </div>
+
+                <div class="timeline-item">
+                    <div class="timeline-time">15:10</div>
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>Trasferimento verso Londra</h3>
+                        <p>Opzione A: Gatwick Express 
+                            Durata: circa 30–35 minuti<br>
+                            Frequenza: ogni 15 minuti circa.<br>
+                            Se compri in anticipo / off-peak<span class="price"> £12–£16 </span><br>
+                            Gatwick Express → Victoria (30 min) – <span class="price">£20–25</span><br>
+                    </div>
+                </div>
+
+                <div class="timeline-item">
+                    <div class="timeline-time">16:00</div>
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>Hotel: Pembridge palace hotel</h3>
+                        <p>Trasferimento in hotel<br>
+                        Costo: <span class="free">Gratis</span></p>
                     </div>
                 </div>
 
@@ -75,7 +106,7 @@
                     <div class="timeline-content">
                         <h3>Notting Hill</h3>
                         <p>Passeggiata tra Portobello Road, case colorate, boutique<br>
-                        Costo: <span class="free">gratis</span></p>
+                        Costo: <span class="free">Gratis</span></p>
                     </div>
                 </div>
 
@@ -85,7 +116,7 @@
                     <div class="timeline-content">
                         <h3>Kensington Gardens</h3>
                         <p>Kensington Palace (esterno), Round Pond<br>
-                        Costo: <span class="free">gratis</span></p>
+                        Costo: <span class="free">Gratis</span></p>
                     </div>
                 </div>
 
@@ -94,9 +125,7 @@
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
                         <h3>Cena in zona Kensington/Bayswater</h3>
-                        <p>Dishoom Kensington (<span class="price">£20–30</span>)<br>
-                        Churchill Arms (<span class="price">£15–25</span>)<br>
-                        Maggie Jones’s (<span class="price">£25–35</span>)</p>
+                        <p>Fast food (Mc donald's, Burger king) (<span class="price">£10-15</span>)</p>
                     </div>
                 </div>
 
@@ -106,7 +135,7 @@
                     <div class="timeline-content">
                         <h3>South Bank serale</h3>
                         <p>Westminster Bridge → London Eye → lungofiume<br>
-                        Costo: <span class="free">gratis</span></p>
+                        Costo: <span class="free">Gratis</span></p>
                     </div>
                 </div>
 
@@ -145,7 +174,7 @@
                     <div class="timeline-content">
                         <h3>Buckingham Palace</h3>
                         <p>Cambio della Guardia (se previsto alle 11:00)<br>
-                        Costo: <span class="free">gratis</span></p>
+                        Costo: <span class="free">Gratis</span></p>
                     </div>
                 </div>
 
@@ -166,7 +195,7 @@
                     <div class="timeline-content">
                         <h3>Soho</h3>
                         <p>Passeggiata tra negozi e vie iconiche<br>
-                        Costo: <span class="free">gratis</span></p>
+                        Costo: <span class="free">Gratis</span></p>
                     </div>
                 </div>
 
@@ -242,7 +271,7 @@
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
                         <h3>Natural History Museum</h3>
-                        <p>Prezzo: <span class="free">gratis</span><br>
+                        <p>Prezzo: <span class="free">Gratis</span><br>
                         Durata: 1h30</p>
                     </div>
                 </div>
@@ -294,7 +323,7 @@
                         <h3>Camden Town</h3>
                         <p>Metro: Notting Hill Gate → Camden Town – <span class="price">£2.80</span><br>
                         Camden Market, Stables Market, Camden Lock<br>
-                        Costo: <span class="free">gratis</span> (street food <span class="price">£8–12</span>)</p>
+                        Costo: <span class="free">Gratis</span> (street food <span class="price">£8–12</span>)</p>
                     </div>
                 </div>
 
@@ -304,7 +333,7 @@
                     <div class="timeline-content">
                         <h3>Primrose Hill</h3>
                         <p>Vista panoramica su Londra<br>
-                        Costo: <span class="free">gratis</span></p>
+                        Costo: <span class="free">Gratis</span></p>
                     </div>
                 </div>
 
