--- a/destinazioni/london.html
+++ b/destinazioni/london.html
@@ -77,8 +77,8 @@
                         </div>
 
                         <!-- OPZIONE A -->
-                        <div id="optionA" class="option-box">
-                            <h4>Opzione A: Southern</h4>
+                        <div id="optionA">
+                            <h4>Southern</h4>
                             <p>Durata: circa 30–35 minuti<br>
                             Frequenza: ogni 15 minuti<br>
                             Se compri in anticipo/off‑peak: <span class="price">£12–£16</span><br>
@@ -87,8 +87,8 @@
                         </div>
 
                         <!-- OPZIONE B -->
-                        <div id="optionB" class="option-box hidden">
-                            <h4>Opzione B: Gatwick Express</h4>
+                        <div id="optionB" class="hidden">
+                            <h4>Gatwick Express</h4>
                             <p>Durata: circa 30 minuti<br>
                             Frequenza: ogni 15 minuti<br>
                             Prezzo: <span class="price">£20–25</span><br>
