--- a/destinazioni/london.html
+++ b/destinazioni/london.html
@@ -58,7 +58,7 @@
                         <p>Dopo i controlli di sicurezza, effettua il trasferimento verso la stazione dei treni (South Terminal)<br>
                         Segui i cartelli Shuttle to South Terminal / Trains<br>
                         Navetta gratuita tra North e South Terminal<br>
-                        Durata: circa 2–3 minuti di navetta + 5 minuti a piedi con i tapis roulant.<span class="free">Gratis</span><br>
+                        Durata: circa 5 minuti di navetta + 5 minuti a piedi con i tapis roulant.<span class="free"> Gratis</span><br>
                         </p>
                     </div>
                 </div>
@@ -78,12 +78,10 @@
 
                         <!-- OPZIONE A -->
                         <div id="optionA">
-                            <h4>Southern</h4>
+                            <h4>Southern - Consigliato</h4>
                             <p>Durata: circa 30–35 minuti<br>
                             Frequenza: ogni 15 minuti<br>
-                            Se compri in anticipo/off‑peak: <span class="price">£12–£16</span><br>
-                            Gatwick Express → Victoria (30 min) – <span class="price">£20–25</span><br>
-                            Thameslink → London Bridge/Blackfriars (35–40 min) – <span class="price">£10–13</span></p>
+                            Southern to London Victoria <span class="price">£15–£17</span><br>
                         </div>
 
                         <!-- OPZIONE B -->
@@ -91,8 +89,7 @@
                             <h4>Gatwick Express</h4>
                             <p>Durata: circa 30 minuti<br>
                             Frequenza: ogni 15 minuti<br>
-                            Prezzo: <span class="price">£20–25</span><br>
-                            Gatwick Express → Victoria (30 min)</p>
+                            Gatwick Express to London Victoria <span class="price">£20–25</span><br>
                         </div>
 
                     </div>
@@ -100,22 +97,13 @@
 
 
                 <div class="timeline-item">
-                    <div class="timeline-time">16:00</div>
+                    <div class="timeline-time">16:07</div>
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
-                        <h3>Hotel: Pembridge palace hotel</h3>
-                        <p>Trasferimento in hotel<br>
-                        Costo: <span class="free">Gratis</span></p>
-                    </div>
-                </div>
-
-                <div class="timeline-item">
-                    <div class="timeline-time">16:00</div>
-                    <div class="timeline-dot"></div>
-                    <div class="timeline-content">
-                        <h3>Notting Hill</h3>
-                        <p>Passeggiata tra Portobello Road, case colorate, boutique<br>
-                        Costo: <span class="free">Gratis</span></p>
+                        <h3>Trasferimento all'hotel</h3>
+                        <p>Da London Victoria a piedi fino alla Circle Line
+                        Dalla Circle Line a Bayswater<span class="price"> circa £3.50</span><br>
+                        Da Bayswater all'hotel Pembridge Palace Hotel - 7 min a piedi<span class="price"> <span class="free">Gratis</span></p>
                     </div>
                 </div>
 
@@ -123,9 +111,10 @@
                     <div class="timeline-time">17:00</div>
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
-                        <h3>Kensington Gardens</h3>
-                        <p>Kensington Palace (esterno), Round Pond<br>
-                        Costo: <span class="free">Gratis</span></p>
+                        <h3>Notting Hill</h3>
+                        <p>Dopo il check-in e la sistemazione in hotel
+                            Passeggiata tra Portobello Road, case colorate, boutique<br>
+                        <span class="free">Gratis</span></p>
                     </div>
                 </div>
 
@@ -133,18 +122,28 @@
                     <div class="timeline-time">18:30</div>
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
-                        <h3>Cena in zona Kensington/Bayswater</h3>
-                        <p>Fast food (Mc donald's, Burger king) (<span class="price">£10-15</span>)</p>
+                        <h3>Kensington Gardens</h3>
+                        <p>Kensington Palace (esterno), Round Pond<br>
+                        <span class="free">Gratis</span></p>
                     </div>
                 </div>
 
                 <div class="timeline-item">
-                    <div class="timeline-time">20:15</div>
+                    <div class="timeline-time">20:00</div>
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>Cena in zona Kensington/Bayswater</h3>
+                        <p>Fast food (Mc donald's, Burger king) <span class="price">£10-15</span></p>
+                    </div>
+                </div>
+
+                <div class="timeline-item">
+                    <div class="timeline-time">21:30</div>
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
                         <h3>South Bank serale</h3>
                         <p>Westminster Bridge → London Eye → lungofiume<br>
-                        Costo: <span class="free">Gratis</span></p>
+                        <span class="free">Gratis</span></p>
                     </div>
                 </div>
 
