--- a/destinazioni/london.html
+++ b/destinazioni/london.html
@@ -105,7 +105,7 @@
                 </div>
 
 
-                <div class="timeline-item" id="noTrain">
+                <div class="timeline-item" id="noTrain hidden">
                     <div class="timeline-time">16:07</div>
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
